style.css
body {
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
}

.container {
    display: flex;
    min-height: 100vh;
}

.menu {
    width: 200px;
    background-color: rgb(186, 205, 205);
    display: flex;
    flex-direction: column;
    padding: 10px;
}

.menu a {
    text-decoration: none;
    color:rgb(90, 93, 94);
    border: 4px solid antiquewhite;
    padding: 15px;
    margin: 10px 0;
    text-align: center;
    font-weight: bold;

}

.menu a:hover {
    background-color: antiquewhite;
}

.content {
    text-align: center;
    flex: 1;
    padding: 20px;
}

h1 {
    text-align: center;
    color: rgb(99, 128, 139);
}

hr {
    border: none;
    height: 5px;
    color: rgb(99, 128, 139);
    background-color: rgb(99, 128, 139);
}

table {
    margin: 10px auto;
    border: 5px solid rgb(99, 128, 139);
    border-collapse: collapse;
}

td {
    width: 200px;
    height: 200px;
    cursor: pointer;
    
}

td img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

#recipeTable {
    border-collapse: collapse;
}

@media (max-width: 700px) {
    .container {
        flex-direction: column;
    }

    .menu {
        width: 100%;
        flex-direction: row;
        justify-content: space-around;
    }

    .content {
        flex: 1;
        margin: 5px;
        padding: 10px;
    }

    td {
        width: 100px;
        height: 80px;
    }
}

.hide {
    display: none;
}

button {
    padding: 10px 20px;
    margin: 5px;
    border: 3px solid rgb(99, 128, 139);
    color: rgb(99, 128, 139);
    cursor: pointer;
    font-weight: bold;
}

button:hover {
    background-color: rgb(99, 128, 139);
    color: antiquewhite;
}

img {
    width: 400pt;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

#headerimg {
    border: 2px solid rgb(99, 128, 139);
}

@media (max-width: 768px) {
    #headerimg {
        width: 400px;
    }
}

@media (max-width: 480px) {
    #headerimg {
        width: 200px;
    }
}

.source-link {
    display: block;
    text-align: center;
    margin-top: 20px;
    font-size: 18px;
    color: rgb(99, 128, 139);
    text-decoration: none;
}

h2 {
    color: rgb(99, 128, 139);
    text-align: center;
}

h3 {
    color: rgb(99, 128, 139);

}

input:checked + span, 
label:has(input:checked) {
  text-decoration: line-through;
  color: #888;
}

.ingredients {
    flex: 1;
    padding: 10px;
    margin-top: 20px;
    gap: 20px;
    text-align: left;
}

.instructions {
    flex: 1;
    padding: 10px;
    margin-top: 20px;
    gap: 20px;
    line-height: 30px;
}

ul {
    list-style: none;
    line-height: 30px;
}

#column {
    flex: 1;
}

#recipeLink {
    padding: 10px 20px;
    margin: 5px;
    border: 3px solid rgb(99, 128, 139);
    color: rgb(99, 128, 139);
    cursor: pointer;
    font-weight: bold;
    margin-bottom: 20px;
    line-height: 40px;

}

#recipeLink:hover {
    background-color: rgb(99, 128, 139);
    color: antiquewhite;
}

#recipeImage {
    border: 2px solid rgb(99, 128, 139);
}

.rating {
    display:flex;
    flex-direction: row-reverse;
    justify-content: flex-end;
}

.rating input {
    display: none;
}

.rating label {
    font-size:35px;
    color:rgb(173, 173, 173);
    cursor: pointer;
}

.rating input:checked ~ label,
.rating label:hover,
.rating label:hover ~ label {
    color:goldenrod;
}

fieldset {
    text-align: left;
    margin: 10px;
    line-height: 35px;
}

.flex-column{
    display: flex;
    color:rgb(99, 128, 139);
}

.column {
    flex: 1;
    padding: 10px;
}

ol {
    text-align: left;
    line-height: 20px;
}

.gap {
    padding-bottom: 20px;
}

